--- a/12_files_indtask.ipynb
+++ b/12_files_indtask.ipynb
@@ -30,14 +30,14 @@
       "content : Letter 1\n",
       "date : 01/01/2000\n",
       "letter_type : Output\n",
-      "number : 4\n",
+      "number : 1\n",
       "sender : Bohak\n",
       "\n",
       "\n",
       "content : Instruction 1\n",
       "date : 02/02/2002\n",
       "employee : Someone who work\n",
-      "number : 1\n",
+      "number : 2\n",
       "period : 3 days\n",
       "workplace : Somwhere\n",
       "\n",
@@ -45,7 +45,7 @@
       "content : Order 1\n",
       "date : 03/03/2003\n",
       "deadline : 23/03/2003\n",
-      "number : 8\n",
+      "number : 3\n",
       "performer : Performer\n",
       "subsection : Subcection 5\n",
       "\n",
@@ -56,14 +56,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Введіть номер документу: 8\n"
+      "Введіть номер документу: 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зміст документу: Order 1\n"
+      "Зміст документу: Instruction 1\n"
      ]
     }
    ],
@@ -89,8 +89,7 @@
     "    \n",
     "        \n",
     "        Documents.alldoc[number] = self\n",
-    "        \n",
-    "        \n",
+    "         \n",
     "        \n",
     "class Orders(Documents):\n",
     "    \n",
@@ -114,19 +113,14 @@
     "        \n",
     "        Documents.alldoc[number] = self\n",
     "        \n",
-    "class AllDocuments(Documents):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        \n",
-    "        pass\n",
-    "     \n",
-    "        \n",
+    "class Manager:\n",
+    "      \n",
     "    def display(self):\n",
     "        \n",
     "        for key, value in Documents.alldoc.items():\n",
-    "            for atttribute in dir(value):\n",
-    "                if atttribute[0] != '_' and atttribute != 'alldoc':\n",
-    "                    print(atttribute, ':', getattr(value , atttribute ) )\n",
+    "            for attribute in dir(value):\n",
+    "                if attribute[0] != '_' and attribute != 'alldoc':\n",
+    "                    print(attribute, ':', getattr(value , attribute ) )\n",
     "            print('\\n')\n",
     "    \n",
     "    def print_by_number(self, number):\n",
@@ -139,17 +133,17 @@
     "                \n",
     "        else: print('Документа з таким номером не існує')    \n",
     "    \n",
-    "all = AllDocuments()\n",
+    "alldocuments = Manager()\n",
     "\n",
-    "list1 = Letters(4, \"01/01/2000\", \"Letter 1\", \"Output\", \"Bohak\")\n",
-    "instruction1 = Instructions(1, \"02/02/2002\", \"Instruction 1\", \"Someone who work\", \"3 days\", \"Somwhere\")\n",
-    "order1 = Orders(8, \"03/03/2003\", \"Order 1\", \"Subcection 5\", \"23/03/2003\", \"Performer\")\n",
+    "list1 = Letters(1, \"01/01/2000\", \"Letter 1\", \"Output\", \"Bohak\")\n",
+    "instruction1 = Instructions(2, \"02/02/2002\", \"Instruction 1\", \"Someone who work\", \"3 days\", \"Somwhere\")\n",
+    "order1 = Orders(3, \"03/03/2003\", \"Order 1\", \"Subcection 5\", \"23/03/2003\", \"Performer\")\n",
     "\n",
     "       \n",
-    "all.display()\n",
+    "alldocuments.display()\n",
     "\n",
     "number = int(input('Введіть номер документу:'))\n",
-    "all.print_by_number(number)\n"
+    "alldocuments.print_by_number(number)\n"
    ]
   },
   {
@@ -171,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,42 +268,39 @@
     "        \n",
     "        Shop.allgoods[number] = self\n",
     "        \n",
-    "class AllGoods(Shop):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "            pass\n",
-    "    \n",
+    "class Manager:\n",
+    "\n",
     "    def display(self):\n",
     "        \n",
     "        for key, value in Shop.allgoods.items():\n",
-    "            for atttribute in dir(value):\n",
-    "                if atttribute[0] != '_' and atttribute != 'allgoods':\n",
-    "                    print(atttribute, ':', getattr(value , atttribute ))\n",
+    "            for attribute in dir(value):\n",
+    "                if attribute[0] != '_' and attribute != 'allgoods':\n",
+    "                    print(attribute, ':', getattr(value , attribute ))\n",
     "            print('\\n')\n",
     "\n",
     "    def print_by_number(self, number):\n",
     "         \n",
     "        for key, value in Shop.allgoods.items():\n",
     "             if key == number:\n",
-    "                for atttribute in dir(value):\n",
-    "                     if atttribute[0] != '_' and atttribute != 'allgoods':\n",
-    "                        print(atttribute, ':', getattr(value , atttribute ))\n",
+    "                for attribute in dir(value):\n",
+    "                     if attribute[0] != '_' and attribute != 'allgoods':\n",
+    "                        print(attribute, ':', getattr(value , attribute ))\n",
     "                break\n",
     "        \n",
     "        else: print('Документа з таким номером не існує')    \n",
     "        \n",
     "            \n",
     "    \n",
-    "all = AllGoods()\n",
+    "allgoods = Manager()\n",
     "\n",
     "motherboard1 = Motherboards(1, \"A515\", 3000, \"Socket H\", 1, \"DIMM\", 16)\n",
     "processors1 =  Processors(2, \"Intel core i5\", 5000, \"Intel LGA 1200\", 4, '4.2 GHz', '45 nm')\n",
     "videocard1 = Videocard(3, \"MX130\", 2500, '1122MHz', '9.9GPixel/s', 24)\n",
     "\n",
-    "all.display()\n",
+    "allgoods.display()\n",
     "\n",
     "number = int(input('Введіть номер документу:'))\n",
-    "all.print_by_number(number)\n"
+    "allgoods.print_by_number(number)\n"
    ]
   },
   {
