--- a/12_files_indtask.ipynb
+++ b/12_files_indtask.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Введіть номер документу: 2\n"
+      "Введіть номер товару: 2\n"
      ]
     },
     {
@@ -287,7 +287,7 @@
     "                        print(attribute, ':', getattr(value , attribute ))\n",
     "                break\n",
     "        \n",
-    "        else: print('Документа з таким номером не існує')    \n",
+    "        else: print('Товару з таким номером не існує')    \n",
     "        \n",
     "            \n",
     "    \n",
@@ -299,7 +299,7 @@
     "\n",
     "allgoods.display()\n",
     "\n",
-    "number = int(input('Введіть номер документу:'))\n",
+    "number = int(input('Введіть номер товару:'))\n",
     "allgoods.print_by_number(number)\n"
    ]
   },
