--- a/13_files_indtask.ipynb
+++ b/13_files_indtask.ipynb
@@ -40,6 +40,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Координата №1  (6;8)\n",
+      "Координата №2  (8;-6)\n",
+      "krapka1.х 6\n",
+      "krapka1.y 8\n",
+      "Відстань до центру координат: 10.0\n",
+      "Відстань до центру координат: 10.0\n",
+      "(6;0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point:\n",
+    "    \n",
+    "    def __init__(self, init_x, init_y):\n",
+    "        self.x = init_x\n",
+    "        self.y = init_y\n",
+    "\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f\"({self.x};{self.y})\"\n",
+    "        \n",
+    "    def distance_from_start(self):\n",
+    "        self.distance = math.sqrt((self.x**2) + (self.y**2))\n",
+    "        print( \"Відстань до центру координат: \" + str(self.distance))\n",
+    "\n",
+    "    def move_down(self, amount):\n",
+    "        self.y -= amount\n",
+    "        \n",
+    "krapka1 = Point(6, 8)\n",
+    "print(\"Координата №1 \", krapka1)\n",
+    "\n",
+    "krapka2 = Point(8, -6)\n",
+    "print(\"Координата №2 \", krapka2)\n",
+    "\n",
+    "print(\"krapka1.х\", krapka1.x)\n",
+    "print(\"krapka1.y\", krapka1.y)\n",
+    "\n",
+    "#print(krapka2.x, krapka2.y)\n",
+    "\n",
+    "\n",
+    "krapka1.distance_from_start()\n",
+    "krapka2.distance_from_start()\n",
+    "\n",
+    "\n",
+    "krapka1.move_down(8)\n",
+    "print(krapka1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,6 +231,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "II\n",
+      "III\n",
+      "IV\n",
+      "NO\n",
+      "False\n",
+      "False\n",
+      "(-6;-8)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    \n",
+    "    def __init__(self, init_x, init_y):\n",
+    "        self.x = init_x\n",
+    "        self.y = init_y\n",
+    "        \n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f\"({self.x};{self.y})\"\n",
+    "        \n",
+    "    def quarter(self):\n",
+    "        \n",
+    "        if self.x > 0:\n",
+    "            if self.y > 0:\n",
+    "                return \"I\"\n",
+    "            elif self.y < 0:\n",
+    "                return \"IV\"\n",
+    "            else:\n",
+    "                return \"NO\"\n",
+    "        elif self.x < 0:\n",
+    "            if self.y > 0:\n",
+    "                return \"II\"\n",
+    "            elif self.y < 0:\n",
+    "                return \"III\"\n",
+    "            else:\n",
+    "                return \"NO\"\n",
+    "        else:\n",
+    "            return \"NO\"\n",
+    "            \n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return (self.x == other.x and self.y == other.y)\n",
+    "    \n",
+    "    def change(self):\n",
+    "        \n",
+    "        self.x *= -1\n",
+    "        self.y *= -1\n",
+    "    \n",
+    "    def this_quarter(self, other):\n",
+    "        \n",
+    "        if self.quarter() == \"NO\" or other.quarter() == \"NO\":\n",
+    "            return False\n",
+    "        \n",
+    "        return self.quarter() == other.quarter()\n",
+    "    \n",
+    "    \n",
+    "krapka1 = Point(6, 8)\n",
+    "krapka2 = Point(-6,8)\n",
+    "krapka3 = Point(-6,-8)\n",
+    "krapka4 = Point(6,-8)\n",
+    "krapka5 = Point(0,-8)\n",
+    "\n",
+    "\n",
+    "print(krapka1.quarter())\n",
+    "print(krapka2.quarter())\n",
+    "print(krapka3.quarter())\n",
+    "print(krapka4.quarter())\n",
+    "print(krapka5.quarter())\n",
+    "\n",
+    "krapka6 = Point(6,8)\n",
+    "\n",
+    "print(krapka1 == krapka2)\n",
+    "print(krapka1 == krapka5)\n",
+    "\n",
+    "\n",
+    "krapka1.change()\n",
+    "print(krapka1)\n",
+    "\n",
+    "\n",
+    "krapka7 = Point(-16, -18)\n",
+    "\n",
+    "print(krapka1.this_quarter(krapka7))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -214,9 +369,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
