--- a/14_files_indtask/14_files_indtask.ipynb
+++ b/14_files_indtask/14_files_indtask.ipynb
@@ -57,16 +57,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Яку каву бажаєте? мак'ято/мокко/по-віденські/глясе/: глясе\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ціна обраної кави: 50\n",
+      "Вставте грошову купюру \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Скільки купюр -  гривни, номінал 20 грн.?:  2\n",
+      "Скільки купюр -  гривни, номінал 10 грн.?:  0\n",
+      "Скільки купюр -  гривни, номінал 5 грн.?:  1\n",
+      "Скільки купюр -  гривни, номінал 2 грн.?:  2\n",
+      "Скільки купюр -  гривни, номінал 1 грн.?:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Залишок грн. 0.0 повернені.\n",
+      "Ваше замовлення глясе ☕️. Дякуємо, що завітали до нас!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Яку каву бажаєте? мак'ято/мокко/по-віденські/глясе/: мокко\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ціна обраної кави: 52.0\n",
+      "Вставте грошову купюру \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Скільки купюр -  гривни, номінал 20 грн.?:  2\n",
+      "Скільки купюр -  гривни, номінал 10 грн.?:  1\n",
+      "Скільки купюр -  гривни, номінал 5 грн.?:  1\n",
+      "Скільки купюр -  гривни, номінал 2 грн.?:  0\n",
+      "Скільки купюр -  гривни, номінал 1 грн.?:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Залишок грн. 3.0 повернені.\n",
+      "Ваше замовлення мокко ☕️. Дякуємо, що завітали до нас!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Яку каву бажаєте? мак'ято/мокко/по-віденські/глясе/: чек\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ціна: грн. 102.0\n",
+      "Вода: 0мл.\n",
+      "Молоко: 90мл.\n",
+      "Кава: 62г.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Яку каву бажаєте? мак'ято/мокко/по-віденські/глясе/: дякую\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Апарат завершив роботу!\n"
+     ]
+    }
+   ],
    "source": [
-    "# стартовий код \n",
-    "from menu import Menu, MenuItem\n",
+    "from menu import Menu\n",
     "from coffee_maker import CoffeeMaker\n",
     "from money_machine import MoneyMachine\n",
     "\n",
-    "# реалізація функціонаьності"
+    "menu = Menu()\n",
+    "money_machine = MoneyMachine()\n",
+    "coffee_maker = CoffeeMaker()\n",
+    "\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    order = input(\"Яку каву бажаєте? {}:\".format(menu.get_items()))\n",
+    "    \n",
+    "    \n",
+    "    if order == 'дякую':\n",
+    "        print('Апарат завершив роботу!')\n",
+    "        break\n",
+    "    \n",
+    "    elif order == 'чек':\n",
+    "        money_machine.report()\n",
+    "        coffee_maker.report()\n",
+    "    \n",
+    "    elif menu.find_drink(order) != None:\n",
+    "        price = menu.find_drink(order).cost\n",
+    "        \n",
+    "        if coffee_maker.is_resource_sufficient(menu.find_drink(order)):\n",
+    "            print(\"Ціна обраної кави:\", price)\n",
+    "            \n",
+    "            if money_machine.make_payment(price):\n",
+    "                coffee_maker.make_coffee(menu.find_drink(order))"
    ]
   },
   {
@@ -94,9 +219,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
